<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/pref_general_header">

        <ListPreference
            app:defaultValue="auto"
            app:entries="@array/file_access_entries"
            app:entryValues="@array/file_access_values"
            app:key="fileAccess"
            app:title="@string/pref_file_access"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="languageAudio"
            app:title="@string/pref_language_audio" />

        <ListPreference
            app:key="menuOpacity"
            app:defaultValue="88"
            app:entries="@array/menu_opacity_entries"
            app:entryValues="@array/menu_opacity_values"
            app:title="@string/pref_menu_opacity"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="timeRemaining"
            app:defaultValue="false"
            app:summaryOn="@string/pref_time_remaining_on"
            app:summaryOff="@string/pref_time_remaining_off"
            app:title="@string/pref_time_remaining" />

        <SwitchPreferenceCompat
            app:key="showStats"
            app:defaultValue="false"
            app:summary="@string/pref_show_stats_summary"
            app:title="@string/pref_show_stats" />

        <SwitchPreferenceCompat
            app:key="systemVolume"
            app:defaultValue="true"
            app:summaryOn="@string/pref_system_volume_on"
            app:summaryOff="@string/pref_system_volume_off"
            app:title="@string/pref_system_volume" />

        <ListPreference
            app:key="volumeBoost"
            app:defaultValue="0"
            app:entries="@array/volume_boost_entries"
            app:entryValues="@array/volume_boost_values"
            app:title="@string/pref_volume_boost"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="volumeGesturesEnabled"
            app:defaultValue="true"
            app:summary="@string/pref_volume_gestures_summary"
            app:title="@string/pref_volume_gestures" />

        <SwitchPreferenceCompat
            app:key="brightnessGesturesEnabled"
            app:defaultValue="true"
            app:summary="@string/pref_brightness_gestures_summary"
            app:title="@string/pref_brightness_gestures" />

        <SwitchPreferenceCompat
            app:key="holdSpeed"
            app:defaultValue="true"
            app:summaryOn="@string/pref_hold_speed_on"
            app:summaryOff="@string/pref_hold_speed_off"
            app:title="@string/pref_hold_speed" />

        <SwitchPreferenceCompat
            app:key="frameRateMatching"
            app:defaultValue="false"
            app:summaryOn="@string/pref_framerate_matching_on"
            app:summaryOff="@string/pref_framerate_matching_off"
            app:title="@string/pref_framerate_matching" />

        <SwitchPreferenceCompat
            app:key="allowSystemFrameRate"
            app:defaultValue="false"
            app:summaryOn="@string/pref_allow_system_framerate_on"
            app:summaryOff="@string/pref_allow_system_framerate_off"
            app:title="@string/pref_allow_system_framerate" />

        <SwitchPreferenceCompat
            app:key="autoPiP"
            app:defaultValue="false"
            app:summaryOn="@string/pref_auto_pip_on"
            app:summaryOff="@string/pref_auto_pip_off"
            app:title="@string/pref_auto_pip" />

        <SwitchPreferenceCompat
            app:key="skipSilence"
            app:defaultValue="false"
            app:summaryOn="@string/pref_skip_silence_on"
            app:summaryOff="@string/pref_skip_silence_off"
            app:title="@string/pref_skip_silence" />

        <SwitchPreferenceCompat
            app:key="repeatToggle"
            app:defaultValue="false"
            app:summary="@string/pref_repeat_toggle_summary"
            app:title="@string/pref_repeat_toggle" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_skip_header">

        <SwitchPreferenceCompat
            app:key="skipEnabled"
            app:defaultValue="true"
            app:summaryOn="@string/pref_skip_enabled_on"
            app:summaryOff="@string/pref_skip_enabled_off"
            app:title="@string/pref_skip_enabled" />

        <ListPreference
            app:key="skipMode"
            app:defaultValue="full"
            app:dependency="skipEnabled"
            app:entries="@array/skip_mode_entries"
            app:entryValues="@array/skip_mode_values"
            app:title="@string/pref_skip_mode"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="skipModeCredits"
            app:defaultValue="full"
            app:dependency="skipEnabled"
            app:entries="@array/skip_mode_entries"
            app:entryValues="@array/skip_mode_values"
            app:title="@string/pref_skip_mode_credits"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="skipFetchOnline"
            app:defaultValue="true"
            app:dependency="skipEnabled"
            app:summaryOn="@string/pref_skip_fetch_on"
            app:summaryOff="@string/pref_skip_fetch_off"
            app:title="@string/pref_skip_fetch" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_subtitle_header">

        <Preference
            app:key="languageSubtitle"
            app:title="@string/pref_language_subtitle" />

        <PreferenceScreen
            app:key="subtitleSources"
            app:summary="@string/pref_subtitle_sources_summary"
            app:title="@string/pref_subtitle_sources">

            <SwitchPreferenceCompat
                app:key="subtitleSourceRest"
                app:defaultValue="true"
                app:summary="@string/pref_subtitle_source_rest_summary"
                app:title="@string/pref_subtitle_source_rest" />

            <SwitchPreferenceCompat
                app:key="subtitleSourceStremio"
                app:defaultValue="true"
                app:summary="@string/pref_subtitle_source_stremio_summary"
                app:title="@string/pref_subtitle_source_stremio" />

            <SwitchPreferenceCompat
                app:key="subtitleSourceShegu"
                app:defaultValue="true"
                app:summary="@string/pref_subtitle_source_shegu_summary"
                app:title="@string/pref_subtitle_source_shegu" />

            <SwitchPreferenceCompat
                app:key="subtitleSourceOpenSubtitles"
                app:defaultValue="true"
                app:summary="@string/pref_subtitle_source_opensubtitles_summary"
                app:title="@string/pref_subtitle_source_opensubtitles" />

        </PreferenceScreen>

        <PreferenceScreen
            app:key="subtitleAppearance"
            app:summary="@string/pref_subtitle_appearance_summary"
            app:title="@string/pref_subtitle_appearance">

            <SwitchPreferenceCompat
                app:key="subtitleStyleEmbedded"
                app:defaultValue="true"
                android:summaryOn="@string/pref_subtitle_style_embedded_on"
                android:summaryOff="@string/pref_subtitle_style_embedded_off"
                app:title="@string/pref_subtitle_style_embedded" />

            <ListPreference
                app:key="subtitleScale"
                app:defaultValue="1.0"
                app:entries="@array/subtitle_scale_entries"
                app:entryValues="@array/subtitle_scale_values"
                app:title="@string/pref_subtitle_scale"
                app:useSimpleSummaryProvider="true" />

            <ListPreference
                app:key="subtitleTextColor"
                app:defaultValue="#FFFFFFFF"
                app:entries="@array/subtitle_text_color_entries"
                app:entryValues="@array/subtitle_text_color_values"
                app:title="@string/pref_subtitle_text_color"
                app:useSimpleSummaryProvider="true" />

            <ListPreference
                app:key="subtitleBackground"
                app:defaultValue="#00000000"
                app:entries="@array/subtitle_background_entries"
                app:entryValues="@array/subtitle_background_values"
                app:title="@string/pref_subtitle_background"
                app:useSimpleSummaryProvider="true" />

            <ListPreference
                app:key="subtitleEdge"
                app:defaultValue="1"
                app:entries="@array/subtitle_edge_entries"
                app:entryValues="@array/subtitle_edge_values"
                app:title="@string/pref_subtitle_edge"
                app:useSimpleSummaryProvider="true" />

            <SwitchPreferenceCompat
                app:key="subtitleStyleBold"
                app:defaultValue="false"
                android:summaryOn="@string/pref_subtitle_style_bold_on"
                android:summaryOff="@string/pref_subtitle_style_bold_off"
                app:title="@string/pref_subtitle_style_bold" />

        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceScreen
        app:key="togetherSettings"
        app:summary="@string/pref_together_summary"
        app:title="@string/together_title">

        <EditTextPreference
            app:dialogTitle="@string/pref_together_nick"
            app:key="togetherNick"
            app:title="@string/pref_together_nick"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="togetherNickRandom"
            app:summary="@string/pref_together_nick_random_summary"
            app:title="@string/pref_together_nick_random" />

        <EditTextPreference
            app:dialogMessage="@string/pref_together_password_summary"
            app:dialogTitle="@string/pref_together_password"
            app:key="togetherPassword"
            app:title="@string/pref_together_password" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="togetherPublic"
            app:summary="@string/pref_together_public_summary"
            app:title="@string/together_public" />

        <EditTextPreference
            app:dialogMessage="@string/pref_together_relay_summary"
            app:dialogTitle="@string/pref_together_relay"
            app:key="togetherRelay"
            app:title="@string/pref_together_relay" />

        <EditTextPreference
            app:dialogMessage="@string/pref_together_invite_page_summary"
            app:dialogTitle="@string/pref_together_invite_page"
            app:key="togetherInvitePage"
            app:title="@string/pref_together_invite_page" />

    </PreferenceScreen>

    <PreferenceCategory app:title="@string/pref_dangerous_header">

        <Preference
            app:selectable="false"
            app:summary="@string/pref_dangerous_warning" />

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/decoder_priority_entries"
            app:entryValues="@array/decoder_priority_values"
            app:key="decoderPriority"
            app:title="@string/pref_decoder_priority"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="tunneling"
            app:defaultValue="false"
            app:summary="@string/pref_tunneling_summary"
            app:title="@string/pref_tunneling" />

        <SwitchPreferenceCompat
            app:key="mapDV7ToHevc"
            app:defaultValue="false"
            app:summaryOn="@string/pref_map_dv7_on"
            app:summaryOff="@string/pref_map_dv7_off"
            app:title="@string/pref_map_dv7" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_update_header">

        <Preference
            app:key="currentVersion"
            app:selectable="false"
            app:title="@string/pref_current_version" />

        <SwitchPreferenceCompat
            app:key="autoUpdate"
            app:defaultValue="true"
            app:summaryOn="@string/pref_auto_update_on"
            app:summaryOff="@string/pref_auto_update_off"
            app:title="@string/pref_auto_update" />

        <Preference
            app:key="checkUpdateNow"
            app:summary="@string/pref_check_update_summary"
            app:title="@string/pref_check_update" />

    </PreferenceCategory>

</PreferenceScreen>
